implementations/rust/ockam/ockam/tests/node/std/fail_if_item_is_not_a_function.rs
// This test checks that #[ockam::node] causes a compile time error
// if the item it is defined on is not a function.

#[ockam::node]
struct A {}
